# BuildingOutLoud

./: README.md  package-lock.json  package.json
programs/Docloc/: Cargo.toml
programs/Docloc/src/: lib.rs
src/: App.css  App.js  firebase.js
src/Components/Header/: Header.js
src/Components/Profile/: Profile.js
src/Components/fileView/: FileInput.js  FileView.js
src/Components/sideIcon/: index.js
src/Components/sidebar/: NewFile.js  SidebarItem.js  index.js
src/Styles/: FileInput.css  FileView.css  Header.css  Profile.css  SidebarItem.css
